--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* ================================= 
+/* =================================
   Base Element Styles
 ==================================== */
 
@@ -15,16 +15,16 @@ button {
 body {
   font: 1em/1.5;
   color: #184f68;
-	background: #accbd9;
+	background-image: radial-gradient(#accbd9 20%, #023966);
 }
 
 header {
-	text-align: center;  
+	text-align: center;
 }
 
 h1 {
 	font-size: 2.5em;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.45);
+	text-shadow: 0 2px 0 rgba(255, 255, 255, 0.45);
 	margin: 0;
 }
 
@@ -32,13 +32,13 @@ a {
   text-decoration: none;
 }
 
-/* ================================= 
+/* =================================
   Form Element Styles
 ==================================== */
 
 form {
 	padding: .875em 1.875em 1.875em;
-	background: #85b5ca;
+	background: #c9b685;
 }
 
 fieldset,
@@ -54,7 +54,7 @@ fieldset {
 
 legend,
 button {
-	font-size: 1.25em;	
+	font-size: 1.25em;
 }
 
 legend {
@@ -78,15 +78,15 @@ label {
 
 input,
 select {
-	margin-bottom: 1.125em;	
+	margin-bottom: 1.125em;
 }
 
 input {
 	font-size: 1em;
 	font-weight: 500;
 	padding: .8em;
-	background: #c1deeb;
-	border: 2px solid #c1deeb;
+	background: #ebdfc0;
+	border: 2px solid #c4aa67;
 	outline: none;
 }
 
@@ -104,16 +104,16 @@ input[type="radio"] {
 button {
 	color: #fff;
 	padding: .55em 1.25em;
-	background: #22627e;
+	background: #0f5270;
 	margin: 1.25em 0 .5em;
 	cursor: pointer;
 }
 
 button:hover {
-	background: #184c62;
+	background: #023966;
 }
 
-/* ================================= 
+/* =================================
   Page Styles
 ==================================== */
 
@@ -135,7 +135,7 @@ button:hover {
 	margin-top: 1.25em;
 }
 
-/* ================================= 
+/* =================================
   Helper Classes
 ==================================== */
 
@@ -149,7 +149,7 @@ button:hover {
   clear: both;
 }
 
-/* ================================= 
+/* =================================
   Media Queries
 ==================================== */
 
