--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ button {
 
 body {
   font: 1em/1.5;
-  color: #184f68;
+  color: #162c5c;
 	background-image: radial-gradient(#accbd9 20%, #023966);
 }
 
